--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
-    "name": "cloudcmd-atom",
-    "version": "0.1.0",
-    "author": "coderaiser <mnemonic.enemy@gmail.com> (https://github.com/coderaiser)",
-    "description": "atom version of Cloud Commander",
-    "homepage": "index.html",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/coderaiser/cloudcmd-app.git"
-    },
-    "dependencies": {
-        "cloudcmd": "*"
-    },
-    "main": "main.js"
+  "name": "cloudcmd",
+  "version": "5.9.1",
+  "private": true,
+  "author": "coderaiser <mnemonic.enemy@gmail.com> (https://github.com/coderaiser)",
+  "description": "atom version of Cloud Commander",
+  "homepage": "index.html",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/coderaiser/cloudcmd-app.git"
+  },
+  "dependencies": {
+    "cloudcmd": "*"
+  },
+  "main": "main.js",
+  "scripts": {
+    "pack:windows": "electron-packager . --platform=win32 --icon=icon.ico",
+    "zip:windows": "onezip -p cloudcmd-win32-x64",
+    "mv:windows": "mv cloudcmd-win32-x64 cloudcmd-v`version`-win32-x64",
+    "rm:windows": "rimraf cloudcmd-win32-*",
+    "upload:windows": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
+    "dist": "redrun pack:* zip:* mv:* upload:* rm:*",
+    "wisdom": "npm run dist"
+  },
+  "devDependencies": {
+    "electron": "^1.4.6",
+    "electron-packager": "^8.2.0",
+    "onezip": "^1.0.4",
+    "putasset": "^1.0.7",
+    "rimraf": "^2.5.4",
+    "version-io": "^1.2.5"
+  }
 }
