--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "mv:windows": "mv cloudcmd-win32-x64 cloudcmd-v`version`-win32-x64",
     "zip:windows": "onezip -p cloudcmd-v`version`-win32-x64",
     "rm:windows": "rimraf cloudcmd-*",
+    "rm:modules": "rimraf node_modules",
+    "install:cloudcmd": "npm i cloudcmd",
     "upload:windows": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
-    "dist": "redrun rm:* pack:* mv:* zip:* upload:*",
+    "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
     "wisdom": "npm run dist"
   },
   "devDependencies": {
