fix(package) wisdom -> wisdom:done

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "install:all": "npm i",
     "upload:windows": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
     "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
-    "wisdom": "npm run dist"
+    "wisdom:done": "npm run dist"
   },
   "devDependencies": {
     "electron": "^1.4.6",
