--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "5.10.1",
   "private": true,
   "changelog": false,
+  "release": false,
   "author": "coderaiser <mnemonic.enemy@gmail.com> (https://github.com/coderaiser)",
   "description": "Desktop version of Cloud Commander",
   "homepage": "http://cloudcmd.io",
