--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,8 +2,6 @@ environment:
   matrix:
   # node.js
   - nodejs_version: "6"
-  # io.js
-  - nodejs_version: "1.0"
 
 install:
   - ps: Install-Product node $env:nodejs_version
@@ -11,13 +9,14 @@ install:
   - npm i
   - npm i gritty
 
+build: off
+
 # Post-install test scripts.
-test_script:
+build_script:
   # Output useful info for debugging.
   - node --version
   - npm --version
   # run tests
   - npm i electron-rebuild -g
-  - npm run electron:rebuild
   - npm run dist
 
