feature(package) ci:zip:windows

--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "mv:windows": "mv cloudcmd-win32-x64 cloudcmd-v`version`-win32-x64",
     "ci:mv:windows": "mv cloudcmd-win32-x64 cloudcmd-v%npm_package_version%-win32-x64",
     "zip:windows": "onezip -p cloudcmd-v`version`-win32-x64",
+    "ci:zip:windows": "onezip -p cloudcmd-v%npm_package_version%-win32-x64",
     "rm:windows": "rimraf cloudcmd-*",
     "rm:modules": "rimraf node_modules",
     "install:all": "npm i",
     "upload:windows": "putasset -u cloudcmd -r electron -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
     "ci:upload:windows": "putasset -u cloudcmd -r electron -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
     "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
-    "dist:ci": "redrun rebuild:* pack:* ci:mv:* zip:* ci:upload:*",
+    "dist:ci": "redrun rebuild:* pack:* ci:mv:* ci:zip:* ci:upload:*",
     "wisdom:done": "npm run dist",
     "rebuild:electron" : "electron-rebuild -f -w node-pty"
   },
