--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "rm:modules": "rimraf node_modules",
     "install:all": "npm i",
     "upload:windows": "putasset -u cloudcmd -r electron -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
-    "ci:upload:windows": "putasset -u cloudcmd -r electron -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
+    "ci:upload:windows": "putasset -l -u cloudcmd -r electron -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
     "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
-    "dist:ci": "redrun rebuild:* pack:* ci:mv:* ci:zip:* ci:upload:*",
+    "ci:dist": "redrun rebuild:* pack:* ci:mv:* ci:zip:* ci:upload:*",
     "wisdom:done": "npm run dist",
     "rebuild:electron" : "electron-rebuild -f -w node-pty"
   },
@@ -38,7 +38,7 @@
     "electron-packager": "^8.2.0",
     "eslint": "^3.10.0",
     "onezip": "^1.0.4",
-    "putasset": "^2.0.0",
+    "putasset": "^2.1.0",
     "rimraf": "^2.5.4",
     "version-io": "^1.2.5"
   }
