--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "rm:windows": "rimraf cloudcmd-*",
     "rm:modules": "rimraf node_modules",
     "install:all": "npm i",
-    "upload:windows": "putasset -u cloudcmd -r electron -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
+    "ci:install:": "cd cloudcmd-win32-x64/resources/app && npm i gritty",
+    "ci:build:": "npm run rebuild:electron && cd ../../..",
+    "upload:windows": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
     "ci:upload:windows": "putasset -l -u cloudcmd -r electron -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
     "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
-    "ci:dist": "redrun rebuild:* pack:* ci:mv:* ci:zip:* ci:upload:*",
-    "wisdom:done": "npm run dist",
-    "rebuild:electron" : "electron-rebuild -f -w node-pty"
+    "ci:dist": "redrun pack:* ci:install:* ci:build:* ci:mv:* ci:zip:* ci:upload:*",
+    "wisdom:done:old": "npm run dist",
+    "wisdom:done": "echo https://ci.appveyor.com/project/coderaiser/electron/",
+    "rebuild:electron" : "electron-rebuild -f -w node-pty --arch x64"
   },
   "devDependencies": {
     "electron": "^1.4.6",
