--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,10 @@
-platform:
-   - x64
+platform: x64
 
 environment:
   nodejs_version: "6"
 
 install:
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version $env:platform
    # install modules
   - npm i
   - npm i redrun -g
