feature(package) add full path

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "rm:windows": "rimraf cloudcmd-*",
     "rm:modules": "rimraf node_modules",
     "install:all": "npm i",
-    "ci:install:": "cd cloudcmd-win32-x64/resources/app && npm i gritty",
-    "ci:build:": "npm run rebuild:electron && cd ../../..",
+    "ci:install:gritty": "cd cloudcmd-win32-x64/resources/app && npm i gritty",
+    "ci:install:pty": "cd node_modules/node-pty && npm i --production",
+    "ci:build:": "npm run rebuild:electron -- -m ./ && cd ../../../..",
     "upload:windows": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
     "ci:upload:windows": "putasset -l -u cloudcmd -r electron -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
     "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
