--- a/package.json
+++ b/package.json
@@ -28,21 +28,23 @@
     "install:all": "npm i",
     "ci:install:gritty": "cd cloudcmd-win32-x64/resources/app && npm i gritty",
     "ci:install:pty": "cd node_modules/node-pty && npm i --production",
-    "ci:build:": "npm run rebuild:electron -- -m ./ && cd ../../../..",
+    "ci:build:": "npm run rebuild:electron -- -m . && cd ../../../.. && ls -lha",
     "upload:windows": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
     "ci:upload:windows": "putasset -l -u cloudcmd -r electron -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
     "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
     "ci:dist": "redrun pack:* ci:install:* ci:build:* ci:mv:* ci:zip:* ci:upload:*",
     "wisdom:done:old": "npm run dist",
     "wisdom:done": "echo https://ci.appveyor.com/project/coderaiser/electron/",
-    "rebuild:electron" : "electron-rebuild -f -w node-pty"
+    "rebuild:electron": "electron-rebuild -f -w node-pty"
   },
   "devDependencies": {
     "electron": "^1.4.6",
     "electron-packager": "^8.2.0",
+    "electron-rebuild": "^1.5.7",
     "eslint": "^3.10.0",
     "onezip": "^1.0.4",
     "putasset": "^2.1.0",
+    "redrun": "^5.9.9",
     "rimraf": "^2.5.4",
     "version-io": "^1.2.5"
   }
