feature(package) cloudcmd/electron -> coderaiser/cloudcmd

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "rm:windows": "rimraf cloudcmd-*",
     "rm:modules": "rimraf node_modules",
     "install:all": "npm i",
-    "upload:windows": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
-    "ci:upload:windows": "putasset -l -u cloudcmd -r electron -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
+    "upload:windows": "putasset -o coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
+    "ci:upload:windows": "putasset -l -o coderaiser -r cloudcmd -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
     "dist": "redrun rm:* install:* pack:* mv:* zip:* upload:*",
     "ci:dist": "redrun pack:* ci:mv:* ci:zip:* ci:upload:*",
     "wisdom:done:old": "npm run dist",
