--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,7 +5,18 @@ environment:
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
-   # install modules
+# Electron's version.
+  - cmd: set npm_config_target=1.6.5
+# The architecture of Electron, can be ia32 or x64.
+  - cmd: set npm_config_arch=x64
+  - cmd: set npm_config_target_arch=x64
+# Download headers for Electron.
+  - cmd: set npm_config_disturl=https://atom.io/download/electron
+# Tell node-pre-gyp that we are building for Electron.
+  - cmd: set npm_config_runtime=electron
+   # Tell node-pre-gyp to build module from source code.
+  - cmd: set npm_config_build_from_source=true
+# install modules
   - npm i
 
 build: off
