--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cloudcmd-electron",
   "productName": "cloudcmd",
-  "version": "6.9.3",
+  "version": "6.10.0",
   "private": true,
   "changelog": false,
   "release": false,
@@ -13,8 +13,7 @@
     "url": "git://github.com/coderaiser/cloudcmd-app.git"
   },
   "dependencies": {
-    "cloudcmd": "*",
-    "gritty": "^1.4.7"
+    "cloudcmd": "*"
   },
   "main": "lib/main.js",
   "scripts": {
@@ -35,7 +34,7 @@
     "wisdom:done": "echo https://ci.appveyor.com/project/coderaiser/electron/"
   },
   "devDependencies": {
-    "electron": "1.6.5",
+    "electron": "1.6.6",
     "electron-packager": "^8.2.0",
     "eslint": "^3.10.0",
     "onezip": "^1.0.4",
