--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "rm:windows": "rimraf cloudcmd-*",
     "rm:modules": "rimraf node_modules",
     "install:all": "npm i",
-    "upload:windows": "putasset -o coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
+    "upload:windows": "putasset -l -o coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
     "ci:upload:windows": "putasset -l -o coderaiser -r cloudcmd -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
     "dist": "redrun pack:* mv:* zip:* upload:* rm:*",
     "ci:dist": "redrun pack:* ci:mv:* ci:zip:* ci:upload:*",
