--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,15 @@ node_js:
 script:
   - npm run lint
 
+env:
+    nodejs_version: 8
+    npm_config_target: 1.7.11
+    npm_config_arch: x64
+    npm_config_target_arch: x64
+    npm_config_disturl: https://atom.io/download/electron
+    npm_config_runtime: electron
+    npm_config_build_from_source: true
+
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update ; fi
