--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "wisdom:done": "echo https://ci.appveyor.com/project/coderaiser/electron/"
   },
   "devDependencies": {
-    "electron": "3.0.7",
+    "electron": "^4.0.0",
     "electron-packager": "^12.1.0",
     "eslint": "^5.4.0",
     "onezip": "^3.1.0",
