--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "wisdom:done": "echo https://ci.appveyor.com/project/coderaiser/electron/"
   },
   "devDependencies": {
-    "electron": "^4.1.3",
+    "electron": "5.0.2",
     "electron-packager": "^13.0.1",
     "eslint": "^5.4.0",
     "onezip": "^3.1.0",
