chore(electron) update options

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,15 +5,15 @@ environment:
   npm_config_target: 6.0.2
   npm_config_arch: x64
   npm_config_target_arch: x64
-  npm_config_disturl: https://atom.io/download/electron
+  npm_config_disturl: https://electronjs.org/headers
   npm_config_runtime: electron
   npm_config_build_from_source: true
-  NODE_GYP_DIR: '%USERPROFILE%\.node-gyp'
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
 # install modules
   - npm i
+  - HOME=~/.electron-gyp npm install
 
 build: off
 
