--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cloudcmd-electron",
   "productName": "cloudcmd",
-  "version": "13.2.0",
+  "version": "13.2.1",
   "private": true,
   "changelog": false,
   "author": "coderaiser <mnemonic.enemy@gmail.com> (https://github.com/coderaiser)",
@@ -47,8 +47,7 @@
     "putasset": "^4.0.0",
     "putout": "^5.9.0",
     "redrun": "^7.0.0",
-    "rimraf": "^3.0.0",
-    "version-io": "^2.0.1"
+    "rimraf": "^3.0.0"
   },
   "engines": {
     "node": ">=8.3.0"
