chore(appveyor) install node-pty beta
For some strange reason npm and yarn always install `node-pty@0.9.0-beta9` and fail to build, but leatest version with a fix is node-pty@0.9.0-beta24`

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,8 @@ environment:
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
 # install modules
-  - npm install
+  - npm i -f
+  - npm i node-pty@beta
 
 build: off
 
