--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,11 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-4.8 ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq install wine ; fi
 
+# need this while node-pty@0.9.0 stable released
+install:
+  - npm i node-pty@beta
+  - npm i
+
 notifications:
     email:
         on_success: never
