feature(package) eslint v6.2.2

--- a/package.json
+++ b/package.json
@@ -13,30 +13,34 @@
   },
   "dependencies": {
     "cloudcmd": "*",
-    "gritty": "^4.3.0"
+    "electron": "6.0.5",
+    "express": "^4.17.1",
+    "gritty": "^4.3.0",
+    "socket.io": "^2.2.0"
   },
   "main": "lib/main.js",
   "scripts": {
-    "lint": "eslint lib",
-    "pack:windows": "electron-packager . --platform=win32 --arch x64 --icon=icon.ico",
-    "mv:windows": "mv cloudcmd-win32-x64 cloudcmd-v`version`-win32-x64",
-    "ci:mv:windows": "mv cloudcmd-win32-x64 cloudcmd-v%npm_package_version%-win32-x64",
-    "zip:windows": "onezip -p cloudcmd-v`version`-win32-x64",
-    "ci:zip:windows": "onezip -p cloudcmd-v%npm_package_version%-win32-x64",
-    "rm:windows": "rimraf cloudcmd-*",
-    "rm:modules": "rimraf node_modules",
-    "install:all": "npm i",
-    "upload:windows": "putasset -l -o coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`-win32-x64.zip",
-    "ci:upload:windows": "putasset -l -o coderaiser -r cloudcmd -t v%npm_package_version% -f cloudcmd-v%npm_package_version%-win32-x64.zip",
-    "dist": "redrun pack:* mv:* zip:* upload:* rm:*",
-    "ci:dist": "redrun pack:* ci:mv:* ci:zip:* ci:upload:*",
-    "wisdom:done:old": "npm run dist",
-    "wisdom:done": "echo https://ci.appveyor.com/project/coderaiser/electron/"
+    "lint": "madrun lint",
+    "fix:lint": "madrun fix:lint",
+    "pack:windows": "madrun pack:windows",
+    "mv:windows": "madrun mv:windows",
+    "ci:mv:windows": "madrun ci:mv:windows",
+    "zip:windows": "madrun zip:windows",
+    "ci:zip:windows": "madrun ci:zip:windows",
+    "rm:windows": "madrun rm:windows",
+    "rm:modules": "madrun rm:modules",
+    "install:all": "madrun install:all",
+    "upload:windows": "madrun upload:windows",
+    "ci:upload:windows": "madrun ci:upload:windows",
+    "dist": "madrun dist",
+    "ci:dist": "madrun ci:dist",
+    "wisdom:done:old": "madrun wisdom:done:old",
+    "wisdom:done": "madrun wisdom:done"
   },
   "devDependencies": {
-    "electron": "6.0.5",
     "electron-packager": "^14.0.4",
-    "eslint": "^5.4.0",
+    "eslint": "^6.2.2",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-putout": "^2.0.0",
     "madrun": "^2.5.1",
     "onezip": "^3.1.0",
