--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
     - 12
 
 cache: false
+sudo: required
 
 script:
   - npm run lint
@@ -17,7 +18,7 @@ env:
     npm_config_build_from_source: true
 
 before_install:
-  - apt-get clean && rm -rf /var/lib/apt/lists/* # hash mismatch fix
+  - sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/* # hash mismatch fix
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq install g++-4.8 ; fi
