chore(package) electron: depenencies -> devDependencies
WARNING: Found 'electron' but not as a devDependency, pruning anyway

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
+    "rules": {
+        "node/no-unpublished-require": "off"
+    },
     "extends": [
         "plugin:putout/recommended",
         "plugin:node/recommended"
