chore(package) release: false

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "14.2.0",
   "private": true,
   "changelog": false,
-  "release": "false",
+  "release": false,
   "author": "coderaiser <mnemonic.enemy@gmail.com> (https://github.com/coderaiser)",
   "description": "Desktop version of Cloud Commander",
   "homepage": "http://cloudcmd.io",
